B&L QA/objects/Secondary_Sales__c.object
<CustomObject>
    <description>INDSU object to capture secondary sale details entered by Sales Managers or Sales Representatives</description>
    <fields>
        <fullName>Area__c</fullName>
        <description>INDSU field to capture the Area Of Sales Exec</description>
        <formula>Sales_Executive_Name__r.APAC_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>INDSU field to capture the country Of Sales Exec</description>
        <formula>Sales_Executive_Name__r.APAC_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Yr_End_Date__c</fullName>
        <description>INDSU field to collect RBD Current_Yr_End_Date</description>
        <label>Current Yr End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Yr_Start_Date__c</fullName>
        <description>INDSU field to collect RBD Current_Yr_Start_Date</description>
        <label>Current Yr Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Id_at_ERP__c</fullName>
        <label>DB Id at ERP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU reference field for account</description>
        <label>DB Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Secondary Sales</relationshipLabel>
        <relationshipName>Secondary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU reference field for account profile object.</description>
        <label>DB Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Secondary Sales</relationshipLabel>
        <relationshipName>Secondary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FP_Date__c</fullName>
        <description>INDSU field to capture the Fiscal Period Date</description>
        <formula>DATE (VALUE (TEXT( Year__c )), Month_Value__c ,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LY_REVENUE_INR__c</fullName>
        <description>INDSU Last Year MTD revenue in INR</description>
        <label>LY REVENUE INR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_REVENUE_USD__c</fullName>
        <description>INDSU Last Year MTD revenue in USD</description>
        <label>LY REVENUE USD</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Yr_End_Date__c</fullName>
        <description>INDSU field to collect RBD Last_Yr_End_Date</description>
        <label>Last Yr End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Yr_Start_Date__c</fullName>
        <description>INDSU field to collect RBD Last_Yr_Start_Date</description>
        <label>Last Yr Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_Value__c</fullName>
        <description>INDSU field to represent month in number</description>
        <formula>CASE(Month__c , &apos;January&apos;, 1, &apos;February&apos;, 2, &apos;March&apos;, 3, &apos;April&apos;, 4, &apos;May&apos;, 5, &apos;June&apos;, 6, &apos;July&apos;, 7, &apos;August&apos;, 8, &apos;September&apos;, 9, &apos;October&apos;, 10, &apos;November&apos;, 11, &apos;December&apos;, 12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>INDSU field to collect sales done on a month.  Values are Jan – Dec.</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REVENUE_INR__c</fullName>
        <description>INDSU MTD revenue in INR</description>
        <label>REVENUE INR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVENUE_USD__c</fullName>
        <description>INDSU MTD revenue in USD</description>
        <label>REVENUE USD</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>INDSU reference field for account Region object.</description>
        <formula>Sales_Executive_Name__r.APAC_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU reference field to capture sales executive name</description>
        <label>Sales Executive Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Secondary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>INDSU field to capture the Sales Executive Role</description>
        <formula>Sales_Executive_Name__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>INDSU field to collect sales done in a financial year. Values will be current year and previous year.</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Secondary Sales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Secondary Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Sales</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Secondary_Sale</fullName>
        <active>true</active>
        <description>Secondary sale monthly data uploaded to salesforce.com</description>
        <label>APACSU Secondary Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Secondary_Sale</fullName>
        <active>true</active>
        <description>INDSU Secondary sale monthly data uploaded to salesforce.com</description>
        <label>INDSU Secondary Sale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>